# WiWi-ESP-Firmware

./: .gitignore  CMakeLists.txt  README.md  WiWi-ESP-Firmware.code-workspace  csi_data_read_parse.py  csi_decode.py  csi_parse.py  sdkconfig
Data_Processing/: Frequency_shift_plot.py  Frequency_shift_plot_multi.py  NIST_plot.py  helper.py  multi_plot.py  multi_plot_v2.py  test_plot.ipynb
csi_recv/: sdkconfig
csi_recv/main/: WiWi.code-workspace  app_main.c
csi_send/: sdkconfig
csi_send/main/: app_main.c
ftm/: sdkconfig  sdkconfig.old
hello_world/main/: hello_world_main.c
management/: Common_Arduino.ino  pull_range_control.h
